--- a/css/style.production.css
+++ b/css/style.production.css
@@ -5,23 +5,13 @@
 * Browsers: last 4 version
 */
 
-:root {
-    --primary-bg-color: #393939;
-    --nav-bg-color: #015668;
-    --tera-bg-color: #263f44; 
-    --primary-color: #ffd369;
-    --ter-bg-color: #fff1cf;
-    --font-weight-bold: bold;
-    --margin-center: 0 auto;
-}
-
 html, body {
 	margin: 0;
     padding: 0;
 }
 body {
     height: 100vh;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
 }
 * {
@@ -31,6 +21,7 @@ body {
 
 h1 {
     text-transform: uppercase;
+    font-family: 'Playfair Display', serif;
 } 
 
 #name {
@@ -45,7 +36,7 @@ header {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    background: var(--primary-bg-color);
+    background: #393939;
     z-index: 99;
     width: 100%;
 }
@@ -113,7 +104,7 @@ ul li a:hover {
 #home {
     padding: .5em;
     display: block;
-    background: var(--primary-bg-color);
+    background: #393939;
     color: ivory;
     position: relative;
     top: 3em;
@@ -132,14 +123,13 @@ ul li a:hover {
 .profile-content h1 {
     display: block;
     color: #ff8882; 
-    font-weight: bolder;
+    font-weight: bold;
     padding: 0;
     margin: 0;
     -webkit-box-pack: center !important;
         -ms-flex-pack: center !important;
             justify-content: center !important;
-    font-style: italic;
-    font-size: 2em;
+    font-size: 2.4em;
 }
 .profile-content p {
     color: #fff;
@@ -147,7 +137,8 @@ ul li a:hover {
     width: 95%;
     margin: 0 auto .5em;
     text-align: center;
-    font-size: 2em;
+    font-size: 1.2em;
+    letter-spacing: .5px;
 }
 
 .profile-img {
@@ -170,33 +161,23 @@ ul li a:hover {
 #btn-project {
     padding: .4em .5em;
     width: 150px;
-    color: var(--primary-bg-color);
+    color: #393939;
     background: #fff1cf;
     cursor: pointer;
-    font-size: 1.2em; 
-    -webkit-transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out; 
-    transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out; 
-    -o-transition: font-size .8s .3s, transform 1s .2s ease-out; 
-    transition: font-size .8s .3s, transform 1s .2s ease-out; 
-    transition: font-size .8s .3s, transform 1s .2s ease-out, -webkit-transform 1s .2s ease-out;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
+    font-size: 1em; 
+    -webkit-box-pack: center; 
+        -ms-flex-pack: center; 
             justify-content: center;
 }
 #btn-contact {
     padding: .5em .5em;
     width: 150px;
-    color: var(--primary-bg-color);
+    color: #393939;
     background: #ff8882;
     cursor: pointer;
-    font-size: 1.2em; 
+    font-size: 1em; 
     border: 1.2px solid #ff8882;
     font-weight: bolder;
-    -webkit-transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
-    transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
-    -o-transition: font-size .8s .3s, transform 1s .2s ease-out;
-    transition: font-size .8s .3s, transform 1s .2s ease-out;
-    transition: font-size .8s .3s, transform 1s .2s ease-out, -webkit-transform 1s .2s ease-out;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -204,22 +185,13 @@ ul li a:hover {
 
 #btn-project:hover {
     opacity: .9;
-    -webkit-transform: scaleX(1.2);
-        -ms-transform: scaleX(1.2);
-            transform: scaleX(1.2);
     color: #ff8882;
     background-color: #393939;
     border: 1.2px solid #ff8882;
 }
 #btn-contact:hover {
     opacity: .9;
-    -webkit-transform: scale(1.1,1.1);
-        -ms-transform: scale(1.1,1.1);
-            transform: scale(1.1,1.1);
     color: #fff1cf;
-    -webkit-transform: scaleX(1.2);
-        -ms-transform: scaleX(1.2);
-            transform: scaleX(1.2);
     background-color: #393939;
     border: 1.2px solid #fff1cf;
 }
@@ -244,11 +216,9 @@ ul li a:hover {
 .abt-item p {
     padding: 1em;
     background: rgb(255,255,255);
-    background: -webkit-gradient(linear, left top, right top, from(rgba(255,255,255,1)), to(rgba(255,234,232,1)));
-    background: -o-linear-gradient(left, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
-    font-size: 2em;
-    letter-spacing: .1em;
+    color: #6a6161;
+    letter-spacing: .33px;
+    line-height: 1.2em;
 }
 
 .iam {
@@ -278,7 +248,7 @@ ul li a:hover {
     display: block;
     width: 250px;
     padding: .5em .6em;
-    background: var(--primary-bg-color);
+    background: #393939;
     color: #fff1cf;
     cursor: pointer;
     margin: 1em auto;
@@ -286,7 +256,7 @@ ul li a:hover {
         -ms-flex-pack: center;
             justify-content: center;
     text-align: center;
-    border: 1.2px var(--primary-bg-color) solid;
+    border: 1.2px #393939 solid;
     font-size: 1.2em;
     -webkit-transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
     transition: font-size .8s .3s, -webkit-transform 1s .2s ease-out;
@@ -300,9 +270,8 @@ ul li a:hover {
             box-shadow: 10px 10px 15px 0px rgb(255, 136, 130,.3);
     text-decoration: none;
     color: #ff8882; 
-    /* border-radius: 2em; */
-    -webkit-transform: scaleX(1.2);
-        -ms-transform: scaleX(1.2);
+    -webkit-transform: scaleX(1.2); 
+        -ms-transform: scaleX(1.2); 
             transform: scaleX(1.2);
     -webkit-transition: all .5s .5s linear;
     -o-transition: all .5s .5s linear;
@@ -317,7 +286,7 @@ ul li a:hover {
 
 #skills h1 {
     display: block;
-    color: var(--primary-bg-color);
+    color: #393939;
     padding: 1em auto;
     text-align: center;
     color: #ff8882;
@@ -363,6 +332,7 @@ ul li a:hover {
     text-align: center;
     color: #fff1cf;
     position: relative;
+    background: #393939;
 }
 #project h1 {
     color: #ff8882;
@@ -377,11 +347,11 @@ ul li a:hover {
     -webkit-box-pack: center; 
         -ms-flex-pack: center; 
             justify-content: center;
-    margin: 0 auto;
+    margin: 0 auto; 
 }
 .projects h2 {
     font-weight: bold;
-    font-size: 3em;
+    font-size: 2em;
     margin: 0;
     margin-bottom: .5em;
     color: #ff8882;
@@ -392,37 +362,38 @@ ul li a:hover {
         -ms-flex-pack: center;
             justify-content: center;
     margin: 0 auto 2em;
-    font-size: 1.4em;
+    font-size: 1em;
     color: #fff1cf;
     width: 85%;
 }
-/* #015668, #263f44, #ffd369, #fff1cf */
-
 .projects__item div {
     display: -webkit-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
     margin: 0 auto;
 }
-
 a#git, a#api {
-    padding: 1em;
+    padding: .7em;
     border: 1.2px solid #fff1cf;
     text-align: center;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
 }
-/* a#api {
-    padding: auto 2em auto;
-} */
-
-a#web, a#case {
-    padding: 1em;
-    color: var(--primary-bg-color);
+a#web {
+    padding: .7em;
+    color: #393939;
     background: #fff1cf;
     border: 1.2px solid #fff1cf;
-    font-weight: bolder;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+}
+a#case {
+    padding: .7em;
+    color: #393939;
+    background: #fff1cf;
+    border: 1.2px solid #fff1cf;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -430,13 +401,52 @@ a#web, a#case {
 a:hover, a#web:hover, a#case:hover {
     color: #ff8882;
 }
-
 .projects__item {
+    border: .1px solid #fff1cf;
+    border-radius: 2em;
+    margin-bottom: 1em;
+}
+.projects__item:hover {
+    border: .1px solid #ff8882;
+}
+
+.movie, .meet, .quiz, .breeds, .chat {
     display: -ms-grid;
     display: grid;
-    border: 1.2px solid var(--primary-bg-color);
-    margin: .5em;
-    height: 400px;
+}
+.movie img {
+    max-width: 100%;
+    max-height: 100%;
+    height: 350px;
+    margin-top: 2em;
+    padding: 0em 2em;
+    background-color: #fff1cf;
+}
+.links {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+}
+.seashell img, .meet img, .breeds img, .chat img  {
+    max-width: 100%;
+    max-height: 100%;
+    height: 350px;
+    margin-top: 2em;
+    padding: 0em 2em;
+}
+.movie-desc, .seashell-desc, .meet-desc, .breeds-desc, .chat-desc {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    padding: 2em 1em;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
@@ -444,30 +454,24 @@ a:hover, a#web:hover, a#case:hover {
     -webkit-box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
             box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
 }
-
-.movie, .meet, .quiz, .dog, .chat {
-    background-color: #393939;
-}
-
 .cs img {
     display: -ms-grid;
     display: grid;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    place-content: var(--margin-center);
+    place-content: 0 auto;
     margin: 0 auto;
     width: 100%;
     -webkit-box-shadow: 10px 10px 18px 10px rgba(0,0,0,.09);
             box-shadow: 10px 10px 18px 10px rgba(0,0,0,.09);
 }
-
 .cs__item {
     -webkit-animation: fadeIn 2s forwards;
             animation: fadeIn 2s forwards;
     opacity: 0;
   }
-
+  
   @-webkit-keyframes fadeIn {
     from {
       opacity: 0;
@@ -480,7 +484,7 @@ a:hover, a#web:hover, a#case:hover {
               transform: translateY(0);
     }
   }
-
+  
   @keyframes fadeIn {
     from {
       opacity: 0;
@@ -534,12 +538,9 @@ a:hover, a#web:hover, a#case:hover {
 }
 .contact {
     text-decoration: none;
-    /* background-image: url('../img/homepic.jpg');
-    background-size: cover; */
     background-color: #393939;
 }
 .contact h2 {
-    /* color: #2c2c2c; */
     color: yellowgreen;
     width: 70%;
     margin: 0 auto 1em; 
@@ -613,12 +614,13 @@ h6 {
     font-size: 2.4em;
     width: 100%;
 }
-span {
+
+.msg span {
     position: relative;
     color: #2c2c2c;
 }
 
-span:before {
+.msg span:before {
     content: ' ';
     position: absolute;
     bottom: 0;
@@ -627,6 +629,10 @@ span:before {
     width: 108%;
     background: #ff8882;
     z-index: -1;
+}
+
+#react {
+    color: #ff8882;
 }
 
 .ids a{
@@ -642,8 +648,12 @@ span:before {
 .ids a:hover {
     border: 1.2px #2c2c2c solid;
     color: #2c2c2c;
-    /* border-radius: 2em; */
 }
+
+#email:hover {
+    content: "prasaad.vijay@gmail.com"
+}
+
 
 .msg p span {
     color: #ff8882;
@@ -664,25 +674,21 @@ span:before {
 @media all and (min-width: 650px) {
 
     .abt-item p {
-        padding: 2em;
+        width: 90%;
     }
 
     .profile-img {
         width: 400px;
     }
     .profile-content {
-        width: 70%;
+        width: 66%;
     }
     .profile-content p {
         text-align: left;
+        color: #d3c4c4;
     }
     #project {
         padding: 3em;
-    }
-    .projects {
-        -ms-grid-columns: 1fr 1em 1fr;
-        grid-template-columns: 1fr 1fr; 
-        grid-gap: 1em;
     }
     #about {
         margin: 7em auto;
@@ -693,16 +699,6 @@ span:before {
     }
     .iam p {
         margin: 2.5em auto;
-    }
-    .projects__item {
-        height: 450px;
-    }
-    .projects__item:nth-of-type(5) {
-        -ms-grid-row: 3;
-        -ms-grid-row-span: 1;
-        -ms-grid-column: 1;
-        -ms-grid-column-span: 2;
-        grid-area: 3/1/4/3;
     }
     .skills-list__item {
         margin: unset;
@@ -728,7 +724,6 @@ span:before {
         width: 30% ;
     }
     .msg {
-        /* font-size: 3em; */
         width: 80%;
         padding: 1em;
     }
@@ -764,9 +759,20 @@ span:before {
     .abt img {
         display: block;
     }
-    #contact {
-        /* height: 700px; */
-        padding: 5em;
+    .abt-item p {
+        width: 70%;
+    }
+    .projects {
+        -ms-grid-columns: 1fr 1em 1fr;
+        grid-template-columns: 1fr 1fr; 
+        grid-gap: 1em;
+    }
+    .projects__item.movie {
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 1;
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 2;
+        grid-area: 1/1/2/3;
     }
     .contact h2 {
         font-size: 2.5em;
@@ -779,7 +785,7 @@ span:before {
     }
 }
 
-@media all and (min-width: 900px) {
+@media all and (min-width: 1024px) {
     ul li a {
         padding: 0 1rem;
     }
@@ -791,13 +797,27 @@ span:before {
         grid-template-columns: 1fr 1fr 1fr; 
         grid-gap: 2em;
     }
-    .projects__item:nth-of-type(5) {
-        -ms-grid-row: 2;
+    .projects__item.movie {
+        -ms-grid-row: 1;
         -ms-grid-row-span: 1;
-        -ms-grid-column: 2;
+        -ms-grid-column: 1;
         -ms-grid-column-span: 2;
-        grid-area: 2/2/3/4;
+        grid-area: 1/1/2/3;
     }
+    .links {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        margin-bottom: 1em;
+    }
+    a#case {
+        margin-left: 1em;
+    }
+
     .skills-list {
         display: -ms-grid;
         display: grid;
