--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ html, body {
 }
 body {
     height: 100vh;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
 }
 * {
@@ -23,6 +23,7 @@ body {
 
 h1 {
     text-transform: uppercase;
+    font-family: 'Playfair Display', serif;
 } 
 
 #name {
@@ -114,12 +115,11 @@ ul li a:hover {
 .profile-content h1 {
     display: block;
     color: #ff8882; 
-    font-weight: bolder;
+    font-weight: bold;
     padding: 0;
     margin: 0;
     justify-content: center !important;
-    font-style: italic;
-    font-size: 2em;
+    font-size: 2.4em;
 }
 .profile-content p {
     color: #fff;
@@ -127,7 +127,8 @@ ul li a:hover {
     width: 95%;
     margin: 0 auto .5em;
     text-align: center;
-    font-size: 2em;
+    font-size: 1.2em;
+    letter-spacing: .5px;
 }
 
 .profile-img {
@@ -148,8 +149,7 @@ ul li a:hover {
     color: var(--primary-bg-color);
     background: #fff1cf;
     cursor: pointer;
-    font-size: 1.2em; 
-    transition: font-size .8s .3s, transform 1s .2s ease-out;
+    font-size: 1em; 
     justify-content: center;
 }
 #btn-contact {
@@ -158,25 +158,21 @@ ul li a:hover {
     color: var(--primary-bg-color);
     background: #ff8882;
     cursor: pointer;
-    font-size: 1.2em; 
+    font-size: 1em; 
     border: 1.2px solid #ff8882;
     font-weight: bolder;
-    transition: font-size .8s .3s, transform 1s .2s ease-out;
     justify-content: center;
 }
 
 #btn-project:hover {
     opacity: .9;
-    transform: scaleX(1.2);
     color: #ff8882;
     background-color: #393939;
     border: 1.2px solid #ff8882;
 }
 #btn-contact:hover {
     opacity: .9;
-    transform: scale(1.1,1.1);
     color: #fff1cf;
-    transform: scaleX(1.2);
     background-color: #393939;
     border: 1.2px solid #fff1cf;
 }
@@ -198,9 +194,9 @@ ul li a:hover {
 .abt-item p {
     padding: 1em;
     background: rgb(255,255,255);
-    background: linear-gradient(90deg, rgba(255,255,255,1) 0%, rgba(255,234,232,1) 100%);
-    font-size: 2em;
-    letter-spacing: .1em;
+    color: #6a6161;
+    letter-spacing: .33px;
+    line-height: 1.2em;
 }
 
 .iam {
@@ -242,7 +238,6 @@ ul li a:hover {
     box-shadow: 10px 10px 15px 0px rgb(255, 136, 130,.3);
     text-decoration: none;
     color: #ff8882; 
-    /* border-radius: 2em; */
     transform: scaleX(1.2);
     transition: all .5s .5s linear;
 }
@@ -294,6 +289,7 @@ ul li a:hover {
     text-align: center;
     color: #fff1cf;
     position: relative;
+    background: #393939;
 }
 #project h1 {
     color: #ff8882;
@@ -304,11 +300,11 @@ ul li a:hover {
     display: grid;
     grid-template-columns: 1fr; 
     justify-content: center;
-    margin: 0 auto;
+    margin: 0 auto; 
 }
 .projects h2 {
     font-weight: bold;
-    font-size: 3em;
+    font-size: 2em;
     margin: 0;
     margin-bottom: .5em;
     color: #ff8882;
@@ -317,53 +313,69 @@ ul li a:hover {
     display: block;
     justify-content: center;
     margin: 0 auto 2em;
-    font-size: 1.4em;
+    font-size: 1em;
     color: #fff1cf;
     width: 85%;
 }
-/* #015668, #263f44, #ffd369, #fff1cf */
-
 .projects__item div {
     display: inline-flex;
     margin: 0 auto;
 }
-
 a#git, a#api {
-    padding: 1em;
+    padding: .7em;
     border: 1.2px solid #fff1cf;
     text-align: center;
     justify-content: center;
 }
-/* a#api {
-    padding: auto 2em auto;
-} */
-
 a#web, a#case {
-    padding: 1em;
+    padding: .7em;
     color: var(--primary-bg-color);
     background: #fff1cf;
     border: 1.2px solid #fff1cf;
-    font-weight: bolder;
     justify-content: center;
 }
 a:hover, a#web:hover, a#case:hover {
     color: #ff8882;
 }
-
 .projects__item {
+    border: .1px solid #fff1cf;
+    border-radius: 2em;
+    margin-bottom: 1em;
+}
+.projects__item:hover {
+    border: .1px solid #ff8882;
+}
+
+.movie, .meet, .quiz, .breeds, .chat {
     display: grid;
-    border: 1.2px solid var(--primary-bg-color);
-    margin: .5em;
-    height: 400px;
+}
+.movie img {
+    max-width: 100%;
+    max-height: 100%;
+    height: 350px;
+    margin-top: 2em;
+    padding: 0em 2em;
+    background-color: #fff1cf;
+}
+.links {
+    display: flex;
+    flex-direction: column;
+}
+.seashell img, .meet img, .breeds img, .chat img  {
+    max-width: 100%;
+    max-height: 100%;
+    height: 350px;
+    margin-top: 2em;
+    padding: 0em 2em;
+}
+.movie-desc, .seashell-desc, .meet-desc, .breeds-desc, .chat-desc {
+    display: flex;
+    flex-direction: column;
+    padding: 2em 1em;
     justify-content: center;
     place-content: center;
     box-shadow: 5px 5px 5px 0px rgba(54, 54, 53, 0.06);
 }
-
-.movie, .meet, .quiz, .dog, .chat {
-    background-color: #393939;
-}
-
 .cs img {
     display: grid;
     justify-content: center;
@@ -372,12 +384,11 @@ a:hover, a#web:hover, a#case:hover {
     width: 100%;
     box-shadow: 10px 10px 18px 10px rgba(0,0,0,.09);
 }
-
 .cs__item {
     animation: fadeIn 2s forwards;
     opacity: 0;
   }
-
+  
   @keyframes fadeIn {
     from {
       opacity: 0;
@@ -428,12 +439,9 @@ a:hover, a#web:hover, a#case:hover {
 }
 .contact {
     text-decoration: none;
-    /* background-image: url('../img/homepic.jpg');
-    background-size: cover; */
     background-color: #393939;
 }
 .contact h2 {
-    /* color: #2c2c2c; */
     color: yellowgreen;
     width: 70%;
     margin: 0 auto 1em; 
@@ -498,12 +506,13 @@ h6 {
     font-size: 2.4em;
     width: 100%;
 }
-span {
+
+.msg span {
     position: relative;
     color: #2c2c2c;
 }
 
-span:before {
+.msg span:before {
     content: ' ';
     position: absolute;
     bottom: 0;
@@ -512,6 +521,10 @@ span:before {
     width: 108%;
     background: #ff8882;
     z-index: -1;
+}
+
+#react {
+    color: #ff8882;
 }
 
 .ids a{
@@ -527,8 +540,12 @@ span:before {
 .ids a:hover {
     border: 1.2px #2c2c2c solid;
     color: #2c2c2c;
-    /* border-radius: 2em; */
 }
+
+#email:hover {
+    content: "prasaad.vijay@gmail.com"
+}
+
 
 .msg p span {
     color: #ff8882;
@@ -548,24 +565,21 @@ span:before {
 @media all and (min-width: 650px) {
 
     .abt-item p {
-        padding: 2em;
+        width: 90%;
     }
 
     .profile-img {
         width: 400px;
     }
     .profile-content {
-        width: 70%;
+        width: 66%;
     }
     .profile-content p {
         text-align: left;
+        color: #d3c4c4;
     }
     #project {
         padding: 3em;
-    }
-    .projects {
-        grid-template-columns: 1fr 1fr; 
-        grid-gap: 1em;
     }
     #about {
         margin: 7em auto;
@@ -576,12 +590,6 @@ span:before {
     }
     .iam p {
         margin: 2.5em auto;
-    }
-    .projects__item {
-        height: 450px;
-    }
-    .projects__item:nth-of-type(5) {
-        grid-area: 3/1/4/3;
     }
     .skills-list__item {
         margin: unset;
@@ -603,7 +611,6 @@ span:before {
         width: 30% ;
     }
     .msg {
-        /* font-size: 3em; */
         width: 80%;
         padding: 1em;
     }
@@ -633,9 +640,15 @@ span:before {
     .abt img {
         display: block;
     }
-    #contact {
-        /* height: 700px; */
-        padding: 5em;
+    .abt-item p {
+        width: 70%;
+    }
+    .projects {
+        grid-template-columns: 1fr 1fr; 
+        grid-gap: 1em;
+    }
+    .projects__item.movie {
+        grid-area: 1/1/2/3;
     }
     .contact h2 {
         font-size: 2.5em;
@@ -648,7 +661,7 @@ span:before {
     }
 }
 
-@media all and (min-width: 900px) {
+@media all and (min-width: 1024px) {
     ul li a {
         padding: 0 1rem;
     }
@@ -659,9 +672,18 @@ span:before {
         grid-template-columns: 1fr 1fr 1fr; 
         grid-gap: 2em;
     }
-    .projects__item:nth-of-type(5) {
-        grid-area: 2/2/3/4;
+    .projects__item.movie {
+        grid-area: 1/1/2/3;
     }
+    .links {
+        display: flex;
+        flex-direction: row;
+        margin-bottom: 1em;
+    }
+    a#case {
+        margin-left: 1em;
+    }
+
     .skills-list {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
